# Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md  image.ppm  main  main.cpp
utilities/: aabb.h  aarect.h  box.h  bvh.h  camera.h  color.h  constant_medium.h  general.h  hittable.h  hittable_list.h  image.h  material.h  moving_sphere.h  perlin.h  ray.h  sphere.h  texture.h  vec3.h
